--- a/client/src/pages/GamesPage/AudioCall/audiocall.scss
+++ b/client/src/pages/GamesPage/AudioCall/audiocall.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    min-height: 84.3vh;
+    min-height: 79.6vh;
 
     .audiocall-card {
         font-size: 2rem;
@@ -68,4 +68,11 @@
             font-size: 1.5rem;
         }
     }
+
+}
+
+.full_screen_btn {
+    margin-top: 1vh;
+    margin-left: 60vw;
+    margin-bottom: 1vh;
 }
