--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -4,12 +4,12 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    min-height: 84.3vh;
+    min-height: 78.6vh;
 
     .savannah-field {
         background-image: url('../../../assets/images/savanna_bg.jpg');
          width: 100%;
-        height: 74.3vh;
+        height: 68.3vh;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
@@ -51,7 +51,7 @@
 
     .activeCardFall {
         transform: scale3d(0.5, 0.5, 0.5);
-        transition: transform 5s linear;
+        transition: transform 4s linear;
     }
 
     .activeCardSpacing {
@@ -136,7 +136,7 @@
     position: absolute;
     width: 25vw;
     height: 25vh;
-    animation: crystal-animation 2s linear infinite;
+    animation: gun-animation 2s linear infinite;
     bottom: 20vh;
     left: 53%;
 }
